vlib/v/checker/tests/defer_use_returned_value_when_nothing_is_returned.vv
fn test() {
	defer {
		println($res())
	}
}
